server/compilers/goLiteJS/src/test/ml1/valid/top9.go
// top level declaration permutations
package main

var x int

type num int
