server/compilers/goLiteJS/src/test/ml1/invalid/decl5.go
//no var keyword in declaration
package main

x int
